# bible-versions

./: .gitignore  README.md  export.py  pyproject.toml  scraper.py  verify.py
